--- a/Infra/Infra.csproj
+++ b/Infra/Infra.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\AppServices\" />
-    <Folder Include="Services\Services\" />
+    <ProjectReference Include="..\Estudos.Domain\Estudos.Domain.csproj" />
   </ItemGroup>
 
 </Project>
